feat: add last change

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,11 @@ const navItems = [
     url: "/#experiencia",
   },
   {
+    title: "Skills",
+    label: "Skills",
+    url: "/#skills",
+  },
+  {
     title: "Proyectos",
     label: "proyectos",
     url: "/#proyectos",
